# kokkos-build

./: CMakeLists.txt
Source/: main.cpp
